# OpenStudio

./: .gitignore  AGENTS.md  BUGFIX_IMPLEMENTATION_PLAN.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  RUBBERBAND_INTEGRATION_PLAN.md  THIRD_PARTY_LICENSES.md  WORKFLOWS.md  build.py  built_in_plugin_upgrade_status.md  features.md  issues.md  midi_editor_reference_matrix.md  midi_instrument_editor_feat_plan.md  new_features.md
.agent/workflows/: project-settings.md
.claude/: settings.json  settings.local.json
.github/workflows/: ai-runtime-release.yml  release.yml  verify.yml
Source/: AITrackEngine.cpp  AITrackEngine.h  ARADebug.h  ARAHostController.cpp  ARAHostController.h  AppUpdater.cpp  AppUpdater.h  ApplicationLaunchState.cpp  ApplicationLaunchState.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioConverter.cpp  AudioConverter.h  AudioEngine.cpp  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  AutomationList.cpp  AutomationList.h  BuiltInEffects.cpp  BuiltInEffects.h  BuiltInEffects2.cpp  BuiltInEffects2.h  CLAPPluginFormat.cpp  CLAPPluginFormat.h  ControlSurfaceManager.cpp  ControlSurfaceManager.h  CrashDiagnostics.cpp  CrashDiagnostics.h  DDPExporter.cpp  DDPExporter.h  LpcEnvelopeTransfer.cpp  LpcEnvelopeTransfer.h  MIDIClip.cpp  MIDIClip.h  MIDIManager.cpp  MIDIManager.h  MIDIRecorder.cpp  MIDIRecorder.h  Main.cpp  (+66 more)
docs/: API.md  USER_MANUAL.md  audio_midi_engine_roadmap.md  audio_signal_chain_qa.md  cubase-grid-quantize-parity-plan.md  design-screenshot-gap-review.md  engine_v3_fullclip_prototype_20260417.md  features.md  implemented_features.md  macos-audio-fixes.md  new_features.md  openstudio-website-launch-plan.md  pitch_corrector_feat_plan.md  pitch_editor_engine_v2_implementation_plan.md  pitch_editor_research_summary.md  pitch_recovery_master_map.md  pitch_renderer_research_notes.md  pitch_root_cause_research_20260417.md  pr_footprint_cleanup_20260501.md  qwen-daw-assistant-turboquant-plan.md  release-runbook.md  release-smoke-checklist.md  runtime-dependency-contract.md
effects/: README.txt  chorus.jsfx  chorus_advanced.jsfx  compressor.jsfx  compressor_advanced.jsfx  delay.jsfx  delay_advanced.jsfx  eq3.jsfx  eq_advanced.jsfx  gain.jsfx  gate.jsfx  gate_advanced.jsfx  reverb.jsfx  reverb_advanced.jsfx  saturation.jsfx  saturation_advanced.jsfx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  MidiEditorWindowApp.tsx  MixerWindowApp.tsx  index.css  main.tsx
frontend/src/__tests__/: aiToolsFeatureInstaller.test.ts  aiToolsSetupModalWindowsLock.test.ts  aiWorkflowParams.test.ts  assistantActionSchema.test.ts  assistantAnalyzerManifest.test.ts  assistantNativeBridgeFallback.test.ts  assistantPanelControls.test.ts  automationCubaseReadWrite.test.ts  automationParams.test.ts  builtInPluginPanel.test.tsx  channelStripMasterControls.test.tsx  fadeUtils.test.ts  fxChain.test.ts  interactionSafetyGuards.test.ts  meterConfig.test.ts  midiQuantize.test.ts  pitchEditorSingleNoteOwnership.test.ts  rulerClickSnap.test.ts  shortcutRegistry.test.ts  snapToGrid.test.ts  tcpHeaderButtonAlignment.test.tsx  workspaceStickyHeader.test.ts
frontend/src/assistant/: actionSchema.ts  executeAssistantActions.ts  index.ts  projectContext.ts
frontend/src/components/: AIContextGenerationModal.tsx  AITrackHeader.tsx  AIWorkflowModal.tsx  AddMultipleTracksModal.tsx  AiToolsSetupModal.tsx  AssistantPanel.tsx  BatchConverterModal.tsx  BigClock.tsx  BuiltInPluginPanel.tsx  ChannelStrip.tsx  ChannelStripEQModal.tsx  CleanProjectModal.tsx  ClipLauncherView.tsx  ClipPropertiesPanel.tsx  ColorPicker.tsx  CommandPalette.tsx  ContextMenu.tsx  CorrectPitchModal.tsx  CrossfadeEditor.tsx  DDPExportModal.tsx  DetachablePanel.tsx  DrumEditor.tsx  DynamicSplitModal.tsx  EnvelopeManagerModal.tsx  ErrorBoundary.tsx  EssentialControlsCard.tsx  FXChainPanel.css  FXChainPanel.tsx  GenericPluginEditor.tsx  GettingStartedGuide.tsx  HelpOverlay.tsx  HorizontalScrollbar.tsx  KeyboardShortcutsModal.tsx  LoudnessMeter.tsx  LowerZone.tsx  MIDIDeviceSelector.tsx  MIDIFXControls.tsx  MainToolbar.tsx  MasterPeakMeterCluster.tsx  MasterTrackHeader.tsx  (+58 more)
frontend/src/data/: aiWorkflows.ts
frontend/src/hooks/: useAiToolsStatus.ts
packaging/: release-notes-template.md
packaging/macos/: OpenStudio.entitlements
packaging/netlify/: _headers  _redirects.template  netlify.toml
packaging/windows/: OpenStudio.iss
resources/models/: BS-Roformer-SW.yaml
scripts/: add_tracks.lua  hello_world.lua  project_info.lua  set_all_volumes.lua  tempo_ramp.lua
tests/: test_install_ai_tools_feature_gating.py  test_install_ai_tools_runtime_repair.py  test_openstudio_ace15_config_detection.py
tools/: OpenStudio.desktop  ai-runtime-install-plan-linux-cuda.json  ai-runtime-install-plan-linux-rocm.json  ai-runtime-install-plan-windows-cuda.json  ai-runtime-install-plan-windows-directml.json  ai-runtime-requirements-linux-cuda.txt  ai-runtime-requirements-linux-rocm.txt  ai-runtime-requirements-linux.txt  ai-runtime-requirements-macos.txt  ai-runtime-requirements-windows-base.txt  ai-runtime-requirements-windows-cuda.txt  ai-runtime-requirements-windows-directml.txt  ai-runtime-requirements-windows.txt  ai-runtime-requirements.txt  ai_runtime_probe.py  analyze_repitch.ps1  analyze_repitch2.ps1  analyze_repitch3.ps1  analyze_repitch4.ps1  analyze_wav_tails.py  assistant-runtime-profiles.json  assistant_service.py  formant_reference_compare.py  generate-icons.mjs  generate-release-metadata.ps1  generate_music.py  inspect-installed-windows-app.ps1  install_ai_tools.py  midasheng_analyzer_service.py  midi-editor-acceptance-harness.mjs  openstudio_ace_runner.py  package-ai-runtime.ps1  package-linux-release.sh  package-macos-release.sh  package-windows-release.ps1  prepare-ai-runtime.ps1  prepare-netlify-release-site.ps1  prepare-public-release.ps1  prepare-release-publish-assets.ps1  probe_ai_worker_runtime.py  (+18 more)
tools/mime/: application-x-openstudio-project.xml
tools/openstudio_ace_backend/: __init__.py  runtime_resolver.py
(+119 files in other folders)
